--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.5",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.9",
@@ -28,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/matt-mich/assignment_3.git"
+    "url": "git://github.com/matt-mich/assignment_4.git"
   },
   "engines": {
     "node": "8.x"
